added some styling

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,17 @@ h1 {
     font-size: 20px;
 }
 
-p{
-    font-size: 40px;
-    font-family: "Courier New", "Courier";
+div {
+    font-size: 30px;
+    font-family: "Comic Sans MS", "Comic Sans";
     color:purple;
+} 
+
+#divtwo {
+    color:orange;
+}
+
+.subHeading {
+    color:blue;
+    font-size: 45px;
 }
